test/flowanalysis/jplevyak/dispatch3.v
f (x:anynum, y:int) : x + y;
f (x:int, y:anynum) : x + y;
print(f(1, 2));
